# drift

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
client/: llm_client.py
config/: config.py  loader.py
core/: __init__.py  constants.py  exceptions.py  interfaces.py  types.py
core/agent/: __init__.py  agent.py  events.py  persistence.py  session.py
core/config/: __init__.py  loader.py  schema.py
core/context/: __init__.py  compaction.py  example_usage.py  loop_detector.py  manager.py  models.py
core/hooks/: __init__.py  environment.py  executor.py  models.py  system.py
core/llm/: __init__.py  client.py  models.py  ollama.py  retry.py
core/prompts/: __init__.py  builder.py
core/safety/: __init__.py  approval.py  example_usage.py  models.py  patterns.py
core/scripts/: __init__.py  test_tool.py
core/tools/: __init__.py  base.py  discovery.py  interfaces.py  models.py  registry.py
core/tools/builtin/: __init__.py  code_analysis.py  code_quality.py  dependencies.py  edit_file.py  file_ops.py  git_branch.py  git_commit.py  git_diff.py  git_log.py  git_stash.py  git_status.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  test_runner.py  todo.py  web_fetch.py  web_search.py  write_file.py
core/tools/mcp/: __init__.py  client.py  manager.py  models.py  tool.py
core/tools/registration/: __init__.py  decorator.py  factory.py  loader.py
core/tools/subagents/: __init__.py  definitions.py  models.py  tool.py
core/ui/: __init__.py  banner.py  console.py  formatters.py  helpers.py  theme.py  tui.py
core/utils/: __init__.py  paths.py  text.py
docs/: TOOLS.md
examples/: basic_usage.py
prompts/: system.py
utils/: text.py
